(Jira: OSPRH-22661) Group-Vars: Create the cifmw_manifests_dir group var
- Create the cifmw_manifests_dir to replace previous instances of "{{ cifmw_basedir }}/artifacts/manifests"
- This new var should be used throughout the entire framework

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -15,6 +15,7 @@ cifmw_architecture_repo: "{{ ansible_user_dir }}/{{ cifmw_architecture_repo_rela
 cifmw_openstack_namespace: "{{ cifmw_install_yamls_defaults['NAMESPACE'] | default('openstack') }}"
 operator_namespace: "{{ cifmw_install_yamls_defaults['OPERATOR_NAMESPACE'] | default('openstack-operators') }}"
 cifmw_basedir: "{{ ansible_user_dir }}/ci-framework-data"
+cifmw_manifests_dir: "{{ cifmw_basedir }}/artifacts/manifests"
 
 # Default DNS servers to use across the framework
 cifmw_default_dns_servers:
