--- a/hooks/playbooks/barbican-enable-luna.yml
+++ b/hooks/playbooks/barbican-enable-luna.yml
@@ -45,7 +45,7 @@
         client_data_secret: "{{ cifmw_hsm_luna_client_data_secret | default('barbican-luna-client-data', true) }}"
         login_secret: "{{ cifmw_hsm_login_secret | default('barbican-luna-login', true) }}"
       ansible.builtin.copy:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/93-barbican-luna.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/93-barbican-luna.yaml"
         mode: "0644"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
