--- a/hooks/playbooks/barbican-enable-proteccio.yml
+++ b/hooks/playbooks/barbican-enable-proteccio.yml
@@ -8,7 +8,7 @@
         login_secret: "{{ cifmw_hsm_login_secret | default('barbican-proteccio-login', true) }}"
       ansible.builtin.copy:
         mode: '0644'
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/93-barbican-proteccio.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/93-barbican-proteccio.yaml"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
