--- a/hooks/playbooks/control_plane_ceph_backends.yml
+++ b/hooks/playbooks/control_plane_ceph_backends.yml
@@ -17,12 +17,12 @@
 
     - name: Ensure the kustomizations dir exists
       ansible.builtin.file:
-        path: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane"
+        path: "{{ cifmw_manifests_dir }}/kustomizations/controlplane"
         state: directory
         mode: "0755"
 
     - name: Create kustomization to add Ceph as backend
       ansible.builtin.template:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/90-ceph-backends-kustomization.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/90-ceph-backends-kustomization.yaml"
         src: "config_ceph_backends.yaml.j2"
         mode: "0644"
