--- a/hooks/playbooks/control_plane_hci_pre_deploy.yml
+++ b/hooks/playbooks/control_plane_hci_pre_deploy.yml
@@ -5,13 +5,13 @@
   tasks:
     - name: Ensure the kustomizations dir exists
       ansible.builtin.file:
-        path: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane"
+        path: "{{ cifmw_manifests_dir }}/kustomizations/controlplane"
         state: directory
         mode: "0755"
 
     - name: Create kustomization for HCI pre deploy step
       ansible.builtin.copy:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/95-hci-pre-kustomization.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/95-hci-pre-kustomization.yaml"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
