--- a/hooks/playbooks/fetch_compute_facts.yml
+++ b/hooks/playbooks/fetch_compute_facts.yml
@@ -76,7 +76,7 @@
 
     - name: Ensure the kustomizations dirs exists
       ansible.builtin.file:
-        path: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/{{ item }}"
+        path: "{{ cifmw_manifests_dir }}/kustomizations/{{ item }}"
         state: directory
         mode: "0755"
       loop:
@@ -85,7 +85,7 @@
 
     - name: Create OpenStackControlPlane CR Kustomization
       ansible.builtin.copy:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/99-kustomization.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/99-kustomization.yaml"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
@@ -138,7 +138,7 @@
             dns_servers: "{{ ((['192.168.122.10'] + ansible_facts['dns']['nameservers']) | unique)[0:2] }}"
           ansible.builtin.copy:
             mode: "0644"
-            dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/dataplane/99-kustomization.yaml"
+            dest: "{{ cifmw_manifests_dir }}/kustomizations/dataplane/99-kustomization.yaml"
             content: |-
               apiVersion: kustomize.config.k8s.io/v1beta1
               kind: Kustomization
