--- a/roles/cleanup_openstack/tasks/main.yaml
+++ b/roles/cleanup_openstack/tasks/main.yaml
@@ -97,8 +97,8 @@
         | unique
       }}
     _external_dns_crs:
-      - "{{ cifmw_basedir }}/artifacts/manifests/cifmw_external_dns/ceph-local-dns.yml"
-      - "{{ cifmw_basedir }}/artifacts/manifests/cifmw_external_dns/ceph-local-cert.yml"
+      - "{{ cifmw_manifests_dir }}/cifmw_external_dns/ceph-local-dns.yml"
+      - "{{ cifmw_manifests_dir }}/cifmw_external_dns/ceph-local-cert.yml"
     _operators_crs:
       - "{{ cifmw_kustomize_deploy_nmstate_dest_file }}"
       - "{{ cifmw_kustomize_deploy_metallb_dest_file }}"
