--- a/roles/federation/tasks/hook_controlplane_config.yml
+++ b/roles/federation/tasks/hook_controlplane_config.yml
@@ -16,7 +16,7 @@
 
 - name: Create file to customize keystone for Federation resources deployed in the control plane
   ansible.builtin.copy:
-    dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/keystone_federation.yaml"
+    dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/keystone_federation.yaml"
     content: |-
       apiVersion: kustomize.config.k8s.io/v1beta1
       kind: Kustomization
