--- a/roles/federation/tasks/hook_horizon_controlplane_config.yml
+++ b/roles/federation/tasks/hook_horizon_controlplane_config.yml
@@ -28,7 +28,7 @@
 
 - name: Create file to customize horizon for Federation resources deployed in the control plane
   ansible.builtin.copy:
-    dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/horizon_federation.yaml"
+    dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/horizon_federation.yaml"
     mode: preserve
     content: |-
       apiVersion: kustomize.config.k8s.io/v1beta1
