--- a/roles/hci_prepare/defaults/main.yml
+++ b/roles/hci_prepare/defaults/main.yml
@@ -15,7 +15,7 @@
 # under the License.
 
 cifmw_hci_prepare_basedir: "{{ cifmw_basedir }}"
-cifmw_hci_prepare_dataplane_dir: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/dataplane"
+cifmw_hci_prepare_dataplane_dir: "{{ cifmw_manifests_dir }}/kustomizations/dataplane"
 cifmw_hci_prepare_dryrun: false
 cifmw_hci_prepare_skip_load_parameters: false
 cifmw_hci_prepare_ceph_secret_path: "/tmp/k8s_ceph_secret.yml"
