--- a/roles/install_openstack_ca/defaults/main.yml
+++ b/roles/install_openstack_ca/defaults/main.yml
@@ -17,7 +17,7 @@
 # All variables intended for modification should be placed in this file.
 # All variables within this role should have a prefix of
 # "cifmw_install_openstack_ca"
-cifmw_install_openstack_ca_dest_path: "{{ cifmw_basedir }}/artifacts/manifests"
+cifmw_install_openstack_ca_dest_path: "{{ cifmw_manifests_dir }}"
 cifmw_install_openstack_ca_file: "tls-ca-bundle.pem"
 cifmw_install_openstack_ca_file_full_path: >-
   {{
