--- a/hooks/playbooks/PCI-DSS-pre-deploy.yml
+++ b/hooks/playbooks/PCI-DSS-pre-deploy.yml
@@ -18,7 +18,7 @@
   tasks:
     - name: Create file to customize keystone for pci dss deployed in the control plane
       ansible.builtin.copy:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/keystone_pci_dss.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/keystone_pci_dss.yaml"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
