--- a/hooks/playbooks/control_plane_horizon.yml
+++ b/hooks/playbooks/control_plane_horizon.yml
@@ -5,13 +5,13 @@
   tasks:
     - name: Ensure the kustomizations dir exists
       ansible.builtin.file:
-        path: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane"
+        path: "{{ cifmw_manifests_dir }}/kustomizations/controlplane"
         state: directory
         mode: "0755"
 
     - name: Create kustomize yaml to enable Horizon
       ansible.builtin.copy:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/80-horizon-kustomization.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/80-horizon-kustomization.yaml"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
