--- a/hooks/playbooks/ipa-controlplane-config.yml
+++ b/hooks/playbooks/ipa-controlplane-config.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Create file to customize keystone for IPA deployed in the control plane
       ansible.builtin.copy:
-        dest: "{{ cifmw_basedir }}/artifacts/manifests/kustomizations/controlplane/keystone_ldap.yaml"
+        dest: "{{ cifmw_manifests_dir }}/kustomizations/controlplane/keystone_ldap.yaml"
         content: |-
           apiVersion: kustomize.config.k8s.io/v1beta1
           kind: Kustomization
