--- a/roles/edpm_kustomize/molecule/default/prepare.yml
+++ b/roles/edpm_kustomize/molecule/default/prepare.yml
@@ -32,7 +32,7 @@
       block:
         - name: Create directory tree
           ansible.builtin.file:
-            path: "{{ cifmw_basedir }}/artifacts/manifests/openstack/dataplane/cr"
+            path: "{{ cifmw_manifests_dir }}/openstack/dataplane/cr"
             state: directory
             mode: "0755"
 
@@ -47,4 +47,4 @@
             mode: "0644"
             remote_src: true
             src: "{{ cifmw_basedir }}/src/openstack-operator/config/samples/dataplane_v1beta1_openstackdataplanenodeset.yaml"
-            dest: "{{ cifmw_basedir }}/artifacts/manifests/openstack/dataplane/cr/dataplane_v1beta1_openstackdataplanenodeset.yaml"
+            dest: "{{ cifmw_manifests_dir }}/openstack/dataplane/cr/dataplane_v1beta1_openstackdataplanenodeset.yaml"
